# Ast3roids

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Coordinates.cpp  Coordinates.h  GameConfig.h  GameModel.cpp  GameModel.h  Globals.h  Makefile  ProjectName.cbp  Quaternion.cpp  Quaternion.h  README.md  RayCaster.cpp  RayCaster.h  StarFox_run.js  StarFox_run.wasm  Vec3.cpp  Vec3.h  Vector3.cpp  Vector3.h  World.h  build.sh  cmake_install.cmake  index.html  justfile  main  main.cbp  main.cpp  manifest.json
Components/: Kinematics.h  Line.h  ParticleSource.h  Shape.h  Transform.h
Systems/: AsteroidSystem.cpp  BlackHoleSystem.cpp  CollisionSystem.cpp  DamageSystem.cpp  FiringSystem.cpp  OutOfBoundsSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PlayerInputSystem.cpp  RenderSystem.cpp  RenderSystem.h
ecs/: EntityManager.cpp  EntityManager.h
src/: Arena.cpp  Arena.h  CMakeLists.txt  Camera.cpp  Camera.h  Coordinates.cpp  GameConfig.h  GameModel.cpp  GameModel.h  Globals.h  Helpers.cpp  Helpers.h  MaterialLibrary.cpp  MaterialLibrary.h  Matrix4.cpp  Matrix4.h  MouseState.cpp  MouseState.h  OpenGL.h  Quaternion.cpp  Quaternion.h  Types.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  main.cpp
src/Components/: Additive.h  AnimatedTexture.h  BoundingCircle.h  Camera.h  Collision.h  Color.h  Geometry.h  Kinematics.h  Light.h  LightAnimation.h  LookAt.h  Material.h  Particle.h  ParticleSource.h  Plane.h  PlaneCollision.h  Position.h  RenderMesh.h  Rotation.h  Scale.h  Shape.h  Skybox.h  SmoothFollow.h  SpaceShip.h  Transform.h  Transparency.h  WallMesh.h
src/Factory/: ArenaFactory.cpp  ArenaFactory.h  AsteroidFactory.cpp  AsteroidFactory.h  BoundingCircleFactory.cpp  BoundingCircleFactory.h  BulletFactory.cpp  BulletFactory.h  CameraFactory.cpp  CameraFactory.h  ExplosionFactory.cpp  ExplosionFactory.h  IcoSphere.cpp  IcoSphere.h  ImpactFactory.cpp  ImpactFactory.h  PlaneFactory.cpp  PlaneFactory.h  SpaceShipFactory.cpp  SpaceShipFactory.h
src/Helpers/: MaterialParser.cpp  MaterialParser.h  NoiseDistortion.cpp  NoiseDistortion.h  Normals.cpp  Normals.h  ObjParser.cpp  ObjParser.h  TextureLoader.cpp  TextureLoader.h
src/Models/: icosphere.mtl  plane.mtl
src/Platform/: Time.cpp  Time.h  Window.cpp  Window.h
src/Render/: LineMesh.cpp  LineMesh.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
src/Shaders/: basic.frag  basic.vert
src/Systems/: AnimatedTextureSystem.cpp  AnimatedTextureSystem.h  AnimationSystem.cpp  AnimationSystem.h  AsteroidSystem.cpp  AsteroidSystem.h  BlackHoleSystem.cpp  BulletCleanupSystem.cpp  BulletCleanupSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  DestroySystem.h  FiringSystem.cpp  ImpactCleanupSystem.h  LookAtSystem.cpp  LookAtSystem.h  MouseLookSystem.cpp  MouseLookSystem.h  OutOfBoundsSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  RayCastingSystem.cpp  RayCastingSystem.h  RenderSystem.cpp  RenderSystem.h  ShipImpactSystem.cpp  (+3 more)
tests/: CMakeLists.txt  Matrix4Test.cpp  ObjParserTest.cpp  QuaternionTest.cpp  VectorTest.cpp
web/: shell.html  smoke.cpp
(+22 files in other folders)
